--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "blogs",
-    "short_name": "blogs",
+    "name": "nickwebsite",
+    "short_name": "nickwebsite",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Nick's Website",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
