--- a/package.json
+++ b/package.json
@@ -1,54 +1,41 @@
 {
-  "name": "nicholasthien/portfolio",
-  "private": false,
-  "description": "This is my portfolio page.",
-  "version": "1.0.1",
-  "author": "Nicholas Thien <nick.thien@gmail.com>",
-  "dependencies": {
-    "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.1.3",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-gatsby-cloud": "^4.5.0-next.2",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sass": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "sass": "1.45.2"
-  },
-  "devDependencies": {
-    "prettier": "2.5.1"
-  },
-  "keywords": [
-    "gatsby",
-    "starter",
-    "bootstrap",
-    "sass"
-  ],
+  "name": "gatsby-starter-hello-world",
+  "private": true,
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
+    "gatsby": "^4.24.5",
+    "gatsby-plugin-gatsby-cloud": "^4.24.1",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "sass": "^1.56.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nickthien-my/nickthien"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
   },
   "bugs": {
-    "url": "https://github.com/nickthien-my/nickthien"
-  },
-  "homepage": "https://www.nickthien.com",
-  "main": "gatsby-browser.js"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
